# noodle

./: CMakeLists.txt  LICENSE  README.md  build.sh  index.html  run.sh
cmake/modules/: FindMosquitto.cmake  FindWiringPi.cmake  Findsqlite3.cmake
docs/: default.css  default.js  index.html
install/: config  noodle.conf  noodle.service
lib/OneWire/: CMakeLists.txt
lib/OneWire/source/: DS18B20.cpp  OneWireManager.cpp  OneWireManager.h
lib/components/: CMakeLists.txt
lib/components/OneWire/: DS18B20.cpp  DS18B20.h  OneWireDevice.cpp  OneWireDevice.h  OneWireManager.cpp  OneWireManager.h
lib/components/source/: component.cpp  component.h  relay.cpp  relay.h  thermostat.cpp  thermostat.h  utils.cpp  utils.h
lib/inih/: CMakeLists.txt
lib/inih/cpp/: CMakeLists.txt
lib/inih/cpp/source/: INIReader.cpp  INIReader.h
lib/inih/source/: ini.c
noodle/: run.sh
noodle/cmake/modules/: FindWiringPi.cmake
noodle/source/: ContentValues.cpp  main.cpp
noodle/source/OneWire/: OneWireDevice.h  OneWireManager.cpp
noodle/source/res/: integers.h  strings.h
source/: ContentValues.h  SimpleConfig.h  config.h.in  main.cpp  main.h  mqtt.cpp  mqtt.h  relay.h  thermostat.h  util.cpp  util.h
source/OneWire/: DS18B20.cpp  DS18B20.h  OneWireDevice.cpp  OneWireDevice.h  OneWireManager.cpp  OneWireManager.h
source/res/: integers.h  strings.h
